fix: Avoid the whitespace issue inside the .btn-icon

--- a/src/cozy/_buttons.scss
+++ b/src/cozy/_buttons.scss
@@ -27,7 +27,9 @@
 }
 
 .btn-icon {
+  display: inline-flex;
   padding: 1rem;
+  border: 0;
   border-radius: 50%;
 }
 
